[gd_scene load_steps=21 format=3 uid="uid://dqlmfh4po84v5"]

[ext_resource type="Script" uid="uid://cs5dk3toqfqw3" path="res://characters/player.gd" id="1_dnjla"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dnjla"]

[sub_resource type="SphereMesh" id="SphereMesh_6p3mc"]
material = SubResource("StandardMaterial3D_dnjla")

[sub_resource type="BoxShape3D" id="BoxShape3D_dnjla"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_dnjla"]
top_radius = 0.05
bottom_radius = 0.3
height = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_dnjla"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3eadt"]

[sub_resource type="Animation" id="Animation_tory2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6t23p"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.843137, 0, 0.133333, 1)]
}

[sub_resource type="Animation" id="Animation_n8jd0"]
resource_name = "block"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.650012, 0.286313, 5.77569e-07, 1)]
}

[sub_resource type="Animation" id="Animation_eho78"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_evndh"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0814852, 0.189885, 0.107866, 1)]
}

[sub_resource type="Animation" id="Animation_j31ep"]
resource_name = "hop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.352941, 0.65098, 0.423529, 1)]
}

[sub_resource type="Animation" id="Animation_q605b"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.44703, 0, 0.0502517, 1)]
}

[sub_resource type="Animation" id="Animation_3eadt"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h1q25"]
resource_name = "leap"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.209587, 0.415969, 0.259518, 1)]
}

[sub_resource type="Animation" id="Animation_x0jl3"]
resource_name = "run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.37586, 0.498111, 0.836845, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8sqrr"]
_data = {
&"RESET": SubResource("Animation_tory2"),
&"attack": SubResource("Animation_6t23p"),
&"block": SubResource("Animation_n8jd0"),
&"death": SubResource("Animation_eho78"),
&"fall": SubResource("Animation_evndh"),
&"hop": SubResource("Animation_j31ep"),
&"hurt": SubResource("Animation_q605b"),
&"idle": SubResource("Animation_3eadt"),
&"leap": SubResource("Animation_h1q25"),
&"run": SubResource("Animation_x0jl3")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dnjla"]
height = 1.0
radius = 15.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3eadt"]
height = 1.0
radius = 1.5

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_dnjla")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("SphereMesh_6p3mc")

[node name="InteractRange" type="Area3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/InteractRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.75)
shape = SubResource("BoxShape3D_dnjla")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.96046e-08, 0.75)
mesh = SubResource("CylinderMesh_dnjla")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_dnjla")

[node name="CameraControl" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraControl"]
shape = SubResource("SphereShape3D_3eadt")
spring_length = 6.0

[node name="Camera3D" type="Camera3D" parent="CameraControl/SpringArm3D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8sqrr")
}

[node name="FollowRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FollowRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_dnjla")

[node name="CloseRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CloseRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_3eadt")
